--- a/java-fundamentals/InOut/.project
+++ b/java-fundamentals/InOut/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>fundamentals</name>
+	<name>InOut</name>
 	<comment></comment>
 	<projects>
 	</projects>
